@@ -26,6 +26,10 @@ As part of Google Season of Docs 2023, we worked with technical writer Damilola 
 
 Thank you to Damilola for his work, and to Google for sponsoring this project.
 
+### Custom template support for `wagtail start`
+
+The `wagtail start` command now supports an optional `--template` argument that allows you to specify a custom project template to use. This is useful if you want to use a custom template that includes additional features or customisations. For more details, see [the project template reference](/reference/project_template). This feature was developed by Thibaud Colas.
+
 ### Other features
 
  * Mark calls to `md5` as not being used for secure purposes, to avoid flagging on FIPS-mode systems (Sean Kelly)
